--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #ff0266;
+        background: #0336ff;
       }
 
       h1 {
         color: white;
         font-family: Arial, Helvetica, sans-serif;
+        font-variant: small-caps;
+        font-size: 10vw;
       }
     </style>
   </head>
