--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       body {
         width: 100vw;
         height: 100vh;
+        padding: 0;
+        margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -18,7 +20,7 @@
         color: white;
         font-family: Arial, Helvetica, sans-serif;
         font-variant: small-caps;
-        font-size: 10vw;
+        font-size: 7vw;
       }
     </style>
   </head>
