--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Start Elevators</title>
     <style>
       body {
         width: 100vw;
@@ -14,6 +14,7 @@
         justify-content: center;
         align-items: center;
         background: #0336ff;
+        flex-direction: column;
       }
 
       h1 {
@@ -22,11 +23,24 @@
         font-variant: small-caps;
         font-size: 7vw;
       }
+      .content {
+        flex: 1;
+      }
+
+      .footer p {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+      }
     </style>
   </head>
   <body>
-    <h1>
-      under construction
-    </h1>
+    <div class="content">
+      <h1>
+        under construction
+      </h1>
+    </div>
+    <div class="footer">
+      <p>Eng: Mohamed Elghaznawy</p>
+    </div>
   </body>
 </html>
