--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         font-size: 7vw;
       }
       .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         flex: 1;
       }
 
