--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Start Elevators</title>
+    <title>Stark Elevators</title>
     <style>
-      body {
-        width: 100vw;
-        height: 100vh;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #0336ff;
-        flex-direction: column;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-variant: small-caps;
-      }
+body {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #0336ff;
+  flex-direction: column;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-variant: small-caps;
+}
 
       .title {
         font-size: 7vw;
