--- a/index.html
+++ b/index.html
@@ -5,57 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stark Elevators</title>
     <style>
-body {
-  width: 100vw;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #0336ff;
-  flex-direction: column;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  font-variant: small-caps;
-}
-
-      .title {
-        font-size: 7vw;
-        margin-bottom: 1vw;
-      }
-
-      .number {
+      body {
+        width: 100vw;
+        height: 100vh;
+        padding: 0;
         margin: 0;
-        font-size: 4vw;
-        color: white;
-        text-decoration: none;
-      }
-
-      .content {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        flex: 1;
-      }
-
-      .footer p {
-        color: white;
         font-family: Arial, Helvetica, sans-serif;
+        font-variant: small-caps;
       }
     </style>
   </head>
   <body>
-    <div class="content">
-      <h1 class="title">
-        under construction
-      </h1>
-      <h1 class="number"></h1>
-      <a class="number" href="tel:01099992818">01099992818</a>
-    </div>
-    <div class="footer">
-      <p>Eng: Mohamed Elghaznawy</p>
-    </div>
+    <img src="img.jpeg" alt="stark elevators" />
   </body>
 </html>
