--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         flex-direction: column;
         font-family: Arial, Helvetica, sans-serif;
         font-variant: small-caps;
+        overflow: hidden;
+        background-color: rgb(3, 34, 77);
+      }
+      img {
+        width: 100%;
       }
     </style>
   </head>
