--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stark Elevators</title>
     <style>
-      body {
-        width: 100vw;
-        height: 100vh;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        font-family: Arial, Helvetica, sans-serif;
-        font-variant: small-caps;
-        overflow: hidden;
-        background-color: rgb(3, 34, 77);
-      }
+body {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  font-variant: small-caps;
+  overflow: hidden;
+  background-color: #01193b;
+}
+
       img {
         width: 100%;
         max-width: 550px;
