--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@ body {
     </style>
   </head>
   <body>
-    <img src="img.jpeg" alt="stark elevators" />
+    <img src="image.jpeg" alt="stark elevators" />
   </body>
 </html>
