--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Shutter Bootstarp Website Template | Home :: w3layouts</title>
+<title>ستارك توريد - تركيب - صيانه - مقاولات عامه</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
 <script src="js/jquery.min.js"></script>
