--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<nav class="subMenu navbar-custom navbar-scroll-top smint" role="navigation" style="position: absolute; top: 737px;">
 	        <div class="container">
 	            <div class="navbar-header page-scroll">
-	                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-main-collapse">
+	                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="" style="opacity:0">
 	                    <img src="images/nav-icon.png" title="drop-down-menu">
 	                </button>
 	            </div>
