--- a/index.html
+++ b/index.html
@@ -1,193 +1,222 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title>ستارك توريد - تركيب - صيانه - مقاولات عامه</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
-<script src="js/jquery.min.js"></script>
-<link href="css/style.css" rel='stylesheet' type='text/css' />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-</script>
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,500,700,900' rel='stylesheet' type='text/css'>
-<script src="js/easing.js"></script>
-	<script type="text/javascript" 	src="js/jquery.smint.js"></script>
-		<script type="text/javascript">
-			$(document).ready( function() {
-			    $('.subMenu').smint({
-			    	'scrollSpeed' : 1000
-			    });
-			});
-		</script>
-</head>
-<body>
-	<div class="header">
-		<div class="logo">
-			<img src="images/logo.png" alt=""/>
-		</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link
+      rel="shortcut icon"
+      href="./imge/Stark Elevators Escalators3.jpg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>ستارك للمصاعد</title>
+  </head>
+  <body>
+    <!-- navbar -->
+    <header class="header">
+      <section class="flex">
+        <a href="#home" class="logo"
+          ><img
+            src="./imge/Stark Elevators Escalators3.jpg"
+            alt=""
+            width="50"
+            height="50"
+          />
+        </a>
+        <nav class="navbar">
+          <a href="#home">الرئيسية</a>
+          <a href="#Features">عن الشركة</a>
+          <a href="#projects">المنتجات</a>
+          <a href="#ourWork">خدمات الشركة</a>
+          <a href="#contact"> اتصل بنا </a>
+        </nav>
+        <div id="menu-btn" class="fas fa-bars"></div>
+      </section>
+    </header>
+    <!-- home -->
 
-	    <div class="slider_container sTop">
-  		<div class="wmuSlider example1">
-			   <div class="wmuSliderWrapper">
-				   <article style="position: absolute; width: 100%; opacity: 1;">
-				   	 <div class="banner-wrap">
-				   		 <div class="slider-left">
-								<h1>توريد - تركيب - صيانه - مقاولات عامه</h1>
-								<!-- <p class="top_desc">ابواب - ماكينات - دلائل</p> -->
-						 </div>
-					 </div>
-				   </article>
-				</div>
-             </div>
-   	     </div>
-	</div>
-	<nav class="subMenu navbar-custom navbar-scroll-top smint" role="navigation" style="position: absolute; top: 737px;">
-	        <div class="container">
-	            <div class="navbar-header page-scroll">
-	                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="" style="opacity:0">
-	                    <img src="images/nav-icon.png" title="drop-down-menu">
-	                </button>
-	            </div>
-	            <!-- Collect the nav links, forms, and other content for toggling -->
-	            <div class="navbar-collapse navbar-left navbar-main-collapse collapse" style="height: 1px;">
-	                <ul class="nav navbar-nav">
-	                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-	                    <li class="active">
-	                        <a id="sTop" class="subNavBtn active" href="#">Home</a>
-	                    </li>
-	                    <li class="page-scroll">
-	                        <a id="s1" class="subNavBtn" href="#">Portfolio</a>
-	                    </li>
-	                    <li class="page-scroll">
-	                        <a id="s2" class="subNavBtn" href="#">Services</a>
-	                    </li>
-	                    <li class="page-scroll">
-	                        <a id="s3" class="subNavBtn" href="#">Sign Up</a>
-	                    </li>
-	                   <li class="page-scroll">
-	                        <a id="s4" class="subNavBtn" href="#">About</a>
-	                    </li>
-	                    <li class="page-scroll">
-	                        <a id="s5" class="subNavBtn" href="#">Contact</a>
-	                    </li>
-	                </ul>
-	            </div>
-	            <!-- /.navbar-collapse -->
-	             	<a id="s4" class="right-msg subNavBtn msg-icon" href="#"><span> </span></a>
-	                <div class="clearfix"> </div>
-	        </div>
-	        <!-- /.container -->
-   	  </nav>
-      <div class="portfolio s1" id="portfolio">
-	  <div class="portfolio_box">
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/machine.png" class="img-responsive" alt=""/>
-		</div>
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/maintnance.jpg" class="img-responsive" alt=""/>
-		</div>
+    <section class="home" id="home">
+      <div>
+        <p class="brand">
+          ستارك للمصاعد <br />
+          والسلالم الكهربائية
+        </p>
+        <p class="text">
+          شركة متخصصه في توريد و تركيب و صيانه المصاعد <br />
+          و السلالام الكهربائية و المقاولات العامه
+        </p>
+      </div>
+    </section>
+    <section class="Features" id="Features">
+      <div class="flex">
+        <div>
+          <i class="fa-sharp fa-solid fa-pen-ruler" width="50"></i>
+          <h2>إدارة ماهرة</h2>
+          <p>
+            فريقنا مدرب تدريباً عالياً ولديه الخبرات اللازمة
+            <br />
+            لتخطيط وإدارة وتسليم مشروعك في الوقت المحدد
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-clipboard-list"></i>
+          <h2>أفكار رائعة</h2>
+          <p>
+            لدينا حلول تناسب كل الأذواق، بناءً على تجربتنا،
+            <br />
+            سوف نقدم أكثر من فكرة لتلبية احتياجاتك
+          </p>
+        </div>
+        <div>
+          <i class="fa-sharp fa-solid fa-pen-ruler"></i>
+          <h2>تصميمات حديثة</h2>
+          <p>
+            فريقنا مدرب تدريباً عالياً ولديه الخبرات اللازمة
+            <br />
+            ولوحة ألوان بسيطة تتناسب مع جميع الأذواق
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="welecome">
+      <div class="flex">
+        <div>
+          <h2>أسهل طرق التركيب</h2>
+          <p>
+            سواء كان المصعد لشركتك أو لبيتك، وسواء أردت تركيب بئر للمصعد أو لا،
+            نستطيع تلبية كل طلباتك بأسهل الطرق
+          </p>
+        </div>
+        <div>
+          <h2>جودة أوروبية</h2>
+          <p>باتباع أفضل إجراءات السلامة، نقدم أسرع الخدمات وأكثرها موثوقية</p>
+        </div>
+        <div>
+          <h2>أسعار منافسة</h2>
+          <p>يمكننا تقديم خدمات عالية الجودة مع الحفاظ على أسعارنا التنافسية</p>
+        </div>
+      </div>
+    </section>
+    <section class="projects" id="projects">
+      <h1>معرض المنتجات</h1>
+      <div class="flex">
+        <div>
+          <img src="./imge/000.webp" alt="" />
+          <h2>مصاعد المنزل</h2>
+          <p>
+            يمكننا من خلال تعاوننا مع أكبر الشركات العالمية تقديم مجموعة كاملة من
+            التطبيقات في جميع وسائل النقل العامودي
+          </p>
+        </div>
+        <div>
+          <img src="./imge/002.webp" alt="" />
+          <h2>مصاعد السيارات</h2>
+          <p>
+            تخيل فندقًا لا يوجد به طريقة فعالة لإيقاف سيارتك، وما هي تكلفة خدش
+            سيارة العملاء وكيف سيؤثر ذلك على سمعة الفندق؟ ستنقل مصاعدنا سيارات
+            العملاء بسرعة وأمان
+          </p>
+        </div>
+        <div>
+          <img src="./imge/001.webp" alt="" />
+          <h2>مصاعد البضائع</h2>
+          <p>
+            تتميز مصاعد البضائع في شركة ستارك للمصاعد بالسرعة والموثوقية مما يقلل
+            من تكلفة العمليات ويزيد من كفائتها
+          </p>
+        </div>
 
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/mo3aina.png" class="img-responsive" alt=""/>
-		</div>
+        <div>
+          <img src="./imge/003.webp" alt="" />
+          <h2>السلالم المتحركة</h2>
+          <p>قلب كل مركز تجاري في جميع أنحاء العالم هو المصعد. السلالم المتحركة تنقل آلاف الأشخاص كل يوم
+          </p>
+        </div>
+        <div>
+          <img src="./imge/006.webp" alt="" />
+          <h2>مصاعد بانورامية</h2>
+          <p> نصمم الكبائن البانورامية لهؤلاء الذين يرغبون في الاستمتاع بالمنظر من الأعلى بكل روعته
+ 
 
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/paitent.png" class="img-responsive" alt=""/>
-		</div>
-		<div class="clearfix"> </div>
-	</div>
-	<div class="portfolio_box">
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/food elevators.png" class="img-responsive" alt=""/>
-		</div>
+          </p>
+        </div>
+        <div>
+          <img src="./imge/005.webp" alt="" />
+          <h2>مصعد لنقل الاطعمة</h2>
+          <p>تتميز مصاعد الطعام لدينا بتصميم قوي وموثوق يزيد من الإنتاجية ويقلل من الإجهاد ويوفر الوقت
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="ourWork" id="ourWork">
+      <div>
+        <h2>خدمات الشركة</h2>
+        <div class="flex">
+          <div>
+            <span class="someWork">الضمان </span>
+            <p class="text">
+              تقدم شركتنا ضمانًا لمدة عامين (2) لجميع المعدات. <br />
+              طاقمنا الفني على أهبة الاستعداد لخدمتكم 24 ساعة / 7 أيام في
+              الأسبوع لإصلاح الأعطال فوراً، وتقديم أفضل خدمة ممكنة.
+            </p>
+          </div>
+          <div>
+            <span class="someWork">خدمة التركيب </span>
+            <p class="text">
+              تقوم شركة ستارك للمصاعد باتباع إجراءات صارمة أثناء تقديم
+              خدمات التركيب وتحت إشراف مهندسين متخصصين، وذلك لحرصها الدائم على
+              تقديم الخدمة الأسرع والأكثر موثوقية داخل جمهورية مصر العربيه
+            </p>
+          </div>
+        </div>
+        <div>
+          <span class="maintenance">الصيانة </span>
 
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/doors.png" class="img-responsive" alt=""/>
-		</div>
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/roomless elevators.png" class="img-responsive" alt=""/>
-		</div>
+          <div class="flex">
+            <div>
+              <h3>صيانة مخطط لها مسبقا</h3>
+              <p>
+                تمنحك صيانتنا الوقائية راحت البال حيث تضمن استمرار عمل مصعدك
+                بشكل دائم
+              </p>
+            </div>
+            <div>
+              <h3>الإصلاحات</h3>
+              <p>
+                إذا تعطل المصعد الخاص بك ، فإن أولويتنا هي إصلاحه. اتفاقية
+                الخدمة الخاصة بك هي ضمانك بأن تحصل على خدمة إصلاح ذات أولوية من
+                المهندسين ذوي الخبرة والدراية بمصعدك
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact" id="contact">
+      <div class="flex">
+        <div>
+          <span>وسائل الإتصال</span>
+          <p>
+            <i class="fa-solid fa-envelope"></i>
+            البريد الالكتروني
+            <br />
+            info@stark-elevators.com
+          </p>
+          <p>
+            <i class="fa-solid fa-mobile"></i>
+            الهاتف
+            <br />
+            01099992818 -- 01144442818
+          </p>
+        </div>
+      </div>
+    </section>
 
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/cabin5.png" class="img-responsive" alt=""/>
-		</div>
-
-		<div class="clearfix"> </div>
-	</div>
-	<div class="portfolio_box">
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/cabin8.png" class="img-responsive" alt=""/>
-		</div>
-
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/external elevators.png" class="img-responsive" alt=""/>
-		</div>
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/doors1.png" class="img-responsive" alt=""/>
-		</div>
-
-		<div class="col_1_of_4 span_1_of_4">
-			<img src="images/doors3.png" class="img-responsive" alt=""/>
-		</div>
-
-		<div class="clearfix"> </div>
-	</div>
-   </div>
-   <div class="services s2" id="services">
-<!--
-   	  <div class="container">
-   	  	<h2 class="service_head">Our Services</h2>
-   	   <div class="row text-center">
-   	    <div class="col-md-3 service_grid">
-   		  <i class="icon1"> </i>
-   		  <h3 class="m_1"><a href="#">One Page Layout</a></h3>
-   		  <p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt..</p>
-   		</div>
-   		<div class="col-md-3 service_grid">
-   		  <i class="icon2"> </i>
-   		 <h3 class="m_1"><a href="#">Flat Design</a></h3>
-   		  <p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt..</p>
-   		</div>
-   		<div class="col-md-3 service_grid">
-   		  <i class="icon3"> </i>
-   		  <h3 class="m_1"><a href="#">Photo portfolio</a></h3>
-   		  <p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt..</p>
-   		</div>
-   		<div class="col-md-3">
-   		  <i class="icon4"> </i>
-   		  <h3 class="m_1"><a href="#">Easy to edit</a></h3>
-   		  <p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt..</p>
-   		</div>
-   	  </div>
-   	  </div>
-   	</div>
-    <div class="photograph">
-   	  <div class="container">
-   		<div class="slider-left">
-		  <h1>Never Stop Photographing</h1>
-		  <p class="top_desc">It Is very likely that your best photograph has not yet been captured</p>
-		  <p class="bottom_desc">- imperdiet doming</p>
-		</div> -->
-   	  </div>
-   	</div>
-   	<div class="footer">
-   		<div class="container">
-   			<div class="copy">
-		       <p>&copy; 2021 Stack Elevators</a></p>
-		    </div>
-		    <div class="social">
-		      <ul>
-			   <li class="facebook"><a href="https://www.facebook.com/StarkElevators.Eg/" target="_blank"><span> </span></a></li>
-			   <!-- <li class="instagram	"><a href="https://www.facebook.com/StarkElevators.Eg/"><span> </span></a></li> -->
-			   <!-- <li class="twitter"><a href="#"><span> </span></a></li>
-			   <li class="rss"><a href="#"><span> </span></a></li>
-			   <li class="google"><a href="#"><span> </span></a></li> -->
-		     </ul>
-			</div>
-			<div class="clearfix"></div>
-   		</div>
-   	</div>
-   	<script src="js/bootstrap.min.js"></script>
-</body>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
-
